tilføjelse af tekst til depression-side

--- a/mental-sundhed/angst.html
+++ b/mental-sundhed/angst.html
@@ -115,7 +115,7 @@
 
             <p>Har du angst, eller mistænker du, at du har angst, er det vigtigt at få hjælp til at håndtere det.</p>
 
-            <p>Det er desuden meget vigtigt, at du ikke på egen hånd begynder på medicinsk behandling. Medicinsk behandling skal udelukkende ske som led i en behandlingsplan udarbejdet af din læge.</p>
+            <p>Det er desuden meget vigtigt, at du ikke på egen hånd begynder på medicinsk behandling. Medicinsk behandling skal udelukkende ske som led i en behandlingsplan udarbejdet i samarbejde med din læge.</p>
 
         </section>
 
