--- a/mental-sundhed/depression.html
+++ b/mental-sundhed/depression.html
@@ -62,11 +62,17 @@
 
             <h2>Hvad er depression?</h2>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus voluptates deleniti, ex placeat inventore nihil maxime iste cum perspiciatis blanditiis sequi est? Ducimus amet explicabo saepe at ad tempora qui.</p>
+            <p>Depression viser sig primært som følelser af nedtrykthed og træthed, samt manglende interesse og drivkraft. Ofte kommer disse følelser uden, at man helt kan sætte fingeren på hvorfor og hvorfra de kommer.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis saepe nulla vitae necessitatibus provident dicta reprehenderit quam cumque sint velit!</p>
+            <p>Når man har en depression, er det almindeligt, at negative og pessimistiske tanker fylder meget, og man kan have lavt selvværd. Kendetegnene for voksne og for unge er som udgangspunkt de samme, men hos unge kan nedtryktheden også ofte vise sig som irritabilitet.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, iure mollitia deleniti totam id facilis reprehenderit atque quis quaerat minima facere illum perferendis eveniet architecto!</p>
+            <p>Livet og hverdagen kan føles helt uoverskueligt, og mange føler, at de ikke har noget at tilbyde verden.</p>
+
+            <p>Intensiteten på en depression kan variere meget - lige fra tristhed til dyb fortvivlelse eller følelsesløshed og apati.</p>
+
+            <p>Har man en depression kan man ikke bare tænke positivt eller "tage sig sammen". Det er en sygdom på lige fod med alle andre - vi forventer jo heller ikke, at vi kan kurere en influenza med et smil og et glas vand!</p>
+
+            <p>Dette betyder dog ikke, at der ikke er hjælp at hente, for det er der bestemt!</p>
 
         </section>
 
@@ -74,15 +80,24 @@
 
             <h2>Symptomer på depression</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aperiam omnis voluptatum libero eos officia.</p>
+            <p>Depression kan vise sig på forskellige måder, alt efter person og sygdommens intensitet. Her kan du læse om de mest typiske tegn på depression:</p>
 
             <ul class="symptomliste">
-                <li>sympt1</li>
-                <li>sympt2</li>
-                <li>sympt3</li>
+                <li>Tristhed og nedtrykthed</li>
+                <li>Følelser af håbløshed</li>
+                <li>Lavt selvværd</li>
+                <li>Øget træthed</li>
+                <li>Indre uro</li>
+                <li>Skyldfølelse</li>
+                <li>Søvnbesvær</li>
+                <li>Koncentrationsbesvær</li>
+                <li>Ændringer i appetit</li>
+                <li>Undvigende adfærd og isolation</li>
+                <li>(i alvorlige tilfælde) selvmordstanker</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quia saepe nulla sint voluptate velit modi voluptatem distinctio. Labore, illo eos? Hic saepe dolore tenetur?</p>
+            <p>Husk på, at Bright Spot ikke skal bruges som diagnosticeringsværktøj. Hvis du kan genkende nogen af disse følelser og symptomer på depression, bør du opsøge din praktiserende læge.</p>
+            <p>Går du med selvmordstanker, kontakt <a href="livslinien.dk">Livslinien</a>, eller i akutte situationer, <strong>ring 112</strong>.</p>
 
         </section>
 
@@ -90,15 +105,22 @@
 
             <h2>Behandling</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, quo!</p>
+            <p>Der er mange muligheder for at behandle og forebygge depression. </p>
 
             <ul class="behandling">
-                <li>mulighed1</li>
-                <li>mulighed2</li>
-                <li>mulighed3</li>
+                <li>Psykoterapi</li>
+                <li><a href="/velvære/egenomsorg.html">Egenomsorg</a></li>
+                <li><a href="/velvære/mindfulness.html">Mindfulness og grounding</a></li>
+                <li><a href="/velvære/motion.html">Ændring af motionsvaner</a></li>
+                <li><a href="/velvære/søvn.html">Bedre søvn</a></li>
+                <li><a href="/velvære/kost.html">Ændring af kostvaner</a></li>
+                <li>Psykoedukation</li>
+                <li>Medicinsk behandling</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel a vitae reiciendis. Vitae, iste deleniti.</p>
+            <p>Er du deprimeret, eller mistænker du, at du er deprimeret, er det vigtigt at få hjælp til at håndtere det. Ubehandlet depression kan medføre længerevarende ændringer i hjernen, og det er derfor vigtigt at opsøge hjælp, hvis man føler sig deprimeret - uanset intensiteten!</p>
+
+            <p>Det er desuden meget vigtigt, at du ikke på egen hånd begynder på medicinsk behandling. Medicinsk behandling skal udelukkende ske som led i en behandlingsplan udarbejdet i samarbejde med din læge.</p>
 
         </section>
 
