tilføjelse af tekst til ensomhed- og stress-siderne

--- a/mental-sundhed/angst.html
+++ b/mental-sundhed/angst.html
@@ -105,9 +105,7 @@
             <p>Det kan f.eks. være:</p>
 
             <ul class="behandling">
-                <li><a href="/velvære/mindfulness.html">Mindfulness og grounding</a></li>
-                <li><a href="/velvære/motion.html">Ændring af motionsvaner</a></li>
-                <li><a href="/velvære/søvn.html">Bedre søvn</a></li>
+                <li><a href="/velvære/index.html">Øvelser og strategier for velvære</a></li>
                 <li>Psykoedukation</li>
                 <li>Psykoterapi</li>
                 <li>Medicinsk behandling</li>
