--- a/mental-sundhed/depression.html
+++ b/mental-sundhed/depression.html
@@ -97,7 +97,7 @@
             </ul>
 
             <p>Husk på, at Bright Spot ikke skal bruges som diagnosticeringsværktøj. Hvis du kan genkende nogen af disse følelser og symptomer på depression, bør du opsøge din praktiserende læge.</p>
-            <p>Går du med selvmordstanker, kontakt <a href="livslinien.dk">Livslinien</a>, eller i akutte situationer, <strong>ring 112</strong>.</p>
+            <p>Går du med selvmordstanker, kontakt <a href="livslinien.dk" class="intext-link">Livslinien</a>, eller i akutte situationer, <strong>ring 112</strong>.</p>
 
         </section>
 
@@ -109,11 +109,7 @@
 
             <ul class="behandling">
                 <li>Psykoterapi</li>
-                <li><a href="/velvære/egenomsorg.html">Egenomsorg</a></li>
-                <li><a href="/velvære/mindfulness.html">Mindfulness og grounding</a></li>
-                <li><a href="/velvære/motion.html">Ændring af motionsvaner</a></li>
-                <li><a href="/velvære/søvn.html">Bedre søvn</a></li>
-                <li><a href="/velvære/kost.html">Ændring af kostvaner</a></li>
+                <li><a href="/velvære/index.html">Øvelser og strategier for velvære</a></li>
                 <li>Psykoedukation</li>
                 <li>Medicinsk behandling</li>
             </ul>
