--- a/mental-sundhed/ensomhed.html
+++ b/mental-sundhed/ensomhed.html
@@ -62,11 +62,13 @@
 
             <h2>Hvad er ensomhed?</h2>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus voluptates deleniti, ex placeat inventore nihil maxime iste cum perspiciatis blanditiis sequi est? Ducimus amet explicabo saepe at ad tempora qui.</p>
+            <p>Ensomhed er en ubehagelig følelse. Den kan føles isolerende, og dermed kan den blive selvforstærkende. Det er en følelse af at være ufrivilligt alene.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis saepe nulla vitae necessitatibus provident dicta reprehenderit quam cumque sint velit!</p>
+            <p>Det at være ensom og det at være alener er ikke det samme. Man kan godt opleve at føle sig forkert, hvis man er ensom - især hvis man rent fysisk ikke er alene, men ensomhed kan ramme alle, og afhænger ikke af, hvorvidt man fysisk er sammen med andre eller ej. Man kan altså sagtens være alene uden at være ensom, ligeså vel som man kan være ensom uden at være alene.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, iure mollitia deleniti totam id facilis reprehenderit atque quis quaerat minima facere illum perferendis eveniet architecto!</p>
+            <p>Ensomheden er en af de ting, som rigtig mange mennesker oplever i løbet af deres liv. Det er helt naturligt at ønske at føle sig som en del af et fællesskab, der forstår en, og når man ikke føler det, kan man let blive ensom.</p>
+
+            <p>Det kan være enormt smertefuldt at føle sig ensom, og det bedste man kan gøre i starten er at anerkende følelsen. Når først man accepterer, at ensomheden er tilstede, bliver det lettere at gøre noget ved den.</p>
 
         </section>
 
@@ -74,15 +76,17 @@
 
             <h2>Symptomer på ensomhed</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aperiam omnis voluptatum libero eos officia.</p>
+            <p>Ensomhed er ikke som sådan en sygdom, men derimod et signal om, at vores sociale behov ikke bliver opfyldt. Derfor er der heller ikke diagnosticerende symptomer, men her kan du læse mere om nogle typiske følelser forbundet med ensomhed:</p>
 
             <ul class="symptomliste">
-                <li>sympt1</li>
-                <li>sympt2</li>
-                <li>sympt3</li>
+                <li>Følelsen af at være "udenfor"</li>
+                <li>En følelse af ikke at blive forstået</li>
+                <li>Følelsen af at være anderledes</li>
+                <li>Et savn til andre mennesker</li>
+                <li>Et savn til følelsen af forbundethed</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quia saepe nulla sint voluptate velit modi voluptatem distinctio. Labore, illo eos? Hic saepe dolore tenetur?</p>
+            <p>I alvorlige tilfælde kan ensomhed udvikle sig til <a href="/mental-sundhed/depression.html" class="intext-link">depression</a>, og det er vigtigt at handle på følelsen, når man bliver opmærksom på den.</p>
 
         </section>
 
@@ -90,15 +94,20 @@
 
             <h2>Behandling</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, quo!</p>
+            <p>Selvom ensomhed ikke i sig selv er en sygdom, findes der mange gode måder, hvorpå man kan modarbejde den. Her kan du læse om, hvad mange har gavn af, når ensomheden melder sig:</p>
 
             <ul class="behandling">
-                <li>mulighed1</li>
-                <li>mulighed2</li>
-                <li>mulighed3</li>
+                <li>Udøv <a href="/velvære/egenomsorg.html">egenomsorg</a></li>
+                <li>Vær tålmodig med dig selv</li>
+                <li>Bryd tabuet - sig det højt til nogen</li>
+                <li>Opsøg ligesindede</li>
+                <li>Udforsk nye sociale hobbyer</li>
+                <li>Mærk naturen</li>
+                <li>Bliv frivillig indenfor noget, du er passioneret omkring</li>
+                <li>Giv plads til følelsen og vid, at du ikke er forkert</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit corporis tempora esse culpa cupiditate aut!</p>
+            <p>Ensomhed kan være overvældende. Hvis det er for svært at handle på følelsen på egen hånd, kan du opsøge hjælp via internettet, <a href="/hotlines.html" class="intext-link">hotlines</a>, hos egen læge eller eventuelt hos en psykolog.</p>
 
         </section>
 
