--- a/mental-sundhed/stress.html
+++ b/mental-sundhed/stress.html
@@ -62,11 +62,15 @@
 
             <h2>Hvad er stress egentlig?</h2>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus voluptates deleniti, ex placeat inventore nihil maxime iste cum perspiciatis blanditiis sequi est? Ducimus amet explicabo saepe at ad tempora qui.</p>
+            <p>Stress er en naturlig og almindelig følelse, der hjælper os med at reagere effektivt i pressede situationer. Kortvarig stress er derfor en nyttig følelse.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis saepe nulla vitae necessitatibus provident dicta reprehenderit quam cumque sint velit!</p>
+            <p>Langvarig stress, derimod, er enormt belastende for hjernen og vores nervesystem, og man kan risikere, at det kan medføre sygdom - både fysisk og psykisk.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, iure mollitia deleniti totam id facilis reprehenderit atque quis quaerat minima facere illum perferendis eveniet architecto!</p>
+            <p>Stress i sig selv er ikke en sygdom, men en belastningstilstand, som påvirker os både fysisk og psykisk. Det er altså en ubalance i vores krop og sind. Det adskiller sig fra almindelig travlhed ved, at der ikke føles nogen glæde eller energifrigivelse i forbindelse med udførelsen af de opgaver, der stresser os.</p>
+
+            <p>Stress opstår, når kravene - både de indre og de ydre - er større, end hvad vi kan præstere (eller føler, at vi kan præstere).</p>
+
+            <p>Ubehandlet længerevarende stress kan i nogle tilfælde medføre sygdomme som f.eks. blodpropper og <a href="/mental-sundhed/depression.html" class="intext-link">depression</a>, og kan i nogle tilfælde også forværre allerede eksisterende sygdomme som f.eks. <a href="/mental-sundhed/angst.html" class="intext-link">angst</a>, astma, psoriasis og diabetes.</p>
 
         </section>
 
@@ -74,15 +78,32 @@
 
             <h2>Symptomer på stress</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aperiam omnis voluptatum libero eos officia.</p>
+            <p>Stress viser sig ofte både fysisk og psykisk. Her kan du læse om nogle af de mest typiske måder hvorpå stress viser sig:</p>
+
+            <p>Fysiske tegn:</p>
 
             <ul class="symptomliste">
-                <li>sympt1</li>
-                <li>sympt2</li>
-                <li>sympt3</li>
+                <li>Hjertebanken</li>
+                <li>Svimmelhed</li>
+                <li>Hovedpine</li>
+                <li>Appetitløshed</li>
+                <li>Rysten</li>
+                <li>Svedeture</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quia saepe nulla sint voluptate velit modi voluptatem distinctio. Labore, illo eos? Hic saepe dolore tenetur?</p>
+            <p>Psykiske tegn:</p>
+
+            <ul class="symptomliste">
+                <li>Træthed</li>
+                <li>Koncentrationsbesvær</li>
+                <li>Forvirring</li>
+                <li>Anspændthed og uro</li>
+                <li>Søvnbesvær</li>
+                <li><a href="/mental-sundhed/angst.html">Angst</a></li>
+                <li><a href="/mental-sundhed/depression.html">Depression</a></li>
+                <li>Nedsat sexlyst</li>
+                <li>Undvigende adfærd</li>
+            </ul>
 
         </section>
 
@@ -90,15 +111,17 @@
 
             <h2>Behandling</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, quo!</p>
+            <p>Der findes mange gode metoder, der kan bruges til at holde stressniveauet nede. Her kan du læse om nogle af de metoder, der typisk er effektive i behandling af stress:</p>
 
             <ul class="behandling">
-                <li>mulighed1</li>
-                <li>mulighed2</li>
-                <li>mulighed3</li>
+                <li><a href="/velvære/index.html">Øvelser og strategier for velvære</a></li>
+                <li>Planlægning og overblik</li>
+                <li>Ærlig kommunikation</li>
+                <li>Regelmæssige pauser</li>
+                <li>Hold fokus på én ting ad gangen</li>
             </ul>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptates officia laborum sequi veritatis iusto.</p>
+            <p>Hvis du føler dig overvældet af stress, kan du kontakte <a href="angststress.dk" class="intext-link">Angst & Stress Foreningen</a> for hjælp og rådgivning.</p>
 
         </section>
 
