--- a/kontakt.html
+++ b/kontakt.html
@@ -67,7 +67,7 @@
 
         </section>
 
-        <form>
+        <form class="kontakt">
 
             <div class="text">
                 <p class="asterisk">*</p>
