Sletning af overflødige filer

--- a/mental-sundhed/ensomhed.html
+++ b/mental-sundhed/ensomhed.html
@@ -97,7 +97,7 @@
             <p>Selvom ensomhed ikke i sig selv er en sygdom, findes der mange gode måder, hvorpå man kan modarbejde den. Her kan du læse om, hvad mange har gavn af, når ensomheden melder sig:</p>
 
             <ul class="behandling">
-                <li>Udøv <a href="/velvære/egenomsorg.html">egenomsorg</a></li>
+                <li>Udøv <a href="#">egenomsorg</a></li>
                 <li>Vær tålmodig med dig selv</li>
                 <li>Bryd tabuet - sig det højt til nogen</li>
                 <li>Opsøg ligesindede</li>
