yderligere tilpasning til desktop + tilføjelse af alt-tekst

--- a/hotlines.html
+++ b/hotlines.html
@@ -105,7 +105,7 @@
 
         </section>
 
-        <iframe src="https://www.youtube.com/embed/1Udhgb1Ej1Y" frameborder="5px"></iframe>
+        <iframe src="https://www.youtube.com/embed/1Udhgb1Ej1Y" frameborder="5px">Video utilgængelig</iframe>
         <p class="credit">Video af: Psykiatrien i Region Midtjylland</p>
 
     </main>
