--- a/mental-sundhed/depression.html
+++ b/mental-sundhed/depression.html
@@ -76,7 +76,7 @@
 
         </section>
 
-        <iframe src="https://www.youtube.com/embed/1Udhgb1Ej1Y" frameborder="5px"></iframe>
+        <iframe src="https://www.youtube.com/embed/1Udhgb1Ej1Y" frameborder="5px">Video utilgængelig</iframe>
         <p class="credit">Video af: Psykiatrien i Region Midtjylland</p>
 
         <section class="textbox depression-sympt">
